--- a/simple_rtl-sdr_addon/Dockerfile
+++ b/simple_rtl-sdr_addon/Dockerfile
@@ -6,5 +6,7 @@ ENV LANG C.UTF-8
 # Copy data for add-on
 COPY run.sh /
 RUN chmod a+x /run.sh
+COPY rtlamr /
+RUN chmod a+x /rtlamr
 
 CMD [ "/run.sh" ]
