fixing COPY part of Dockerfile

--- a/simple_rtl-sdr_addon/Dockerfile
+++ b/simple_rtl-sdr_addon/Dockerfile
@@ -4,9 +4,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Copy data for add-on
-COPY run.sh /
-RUN chmod a+x /run.sh
-COPY rtlamr /
-RUN chmod a+x /rtlamr
+COPY rtlamr run.sh /
+RUN chmod a+x /run.sh /rtlamr
 
 CMD [ "/run.sh" ]
