--- a/simple_rtl-sdr_addon/Dockerfile
+++ b/simple_rtl-sdr_addon/Dockerfile
@@ -1,10 +1,11 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
+#FROM homeassistant/amd64-base:latest
 
 ENV LANG C.UTF-8
 
 # Copy data for add-on
-COPY rtlamr run.sh /
-RUN chmod a+x /run.sh /rtlamr
+COPY run.sh /
+RUN chmod a+x /run.sh; apk add go; go get github.com/bemasher/rtlamr
 
 CMD [ "/run.sh" ]
