--- a/simple_rtl-sdr_addon/Dockerfile
+++ b/simple_rtl-sdr_addon/Dockerfile
@@ -8,4 +8,4 @@ ENV LANG C.UTF-8
 COPY run.sh /
 RUN chmod a+x /run.sh; apk add go; go get github.com/bemasher/rtlamr
 
-CMD [ "/run.sh" ]
+CMD [ "bash -x /run.sh" ]
